--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
+# Core dependencies
 numpy>=1.20.0
-matplotlib>=3.4.0
-Pillow>=8.0.0
 numba>=0.53.0
-jupyter>=1.0.0
-pytest>=6.0.0  # For testing
+Pillow>=8.0.0
+
