--- a/pixi.toml
+++ b/pixi.toml
@@ -18,6 +18,7 @@ cuda-nvcc = ">=12.8.93,<13"
 cuda-nvrtc = ">=12.8.93,<13"
 cuda-version = ">=12.0"
 ipykernel = ">=6.29.5,<7"
+pytest = ">=8.3.5,<9"
 
 [pypi-dependencies]
 pyequilib = ">=0.5.8, <0.6"
