--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install packaging tools
         run: |
           python -m pip install --upgrade pip
-          python -m pip install build twine pyproject-metadata
+          python -m pip install build twine pyproject-metadata tomli
 
       - name: Clean previous build artifacts
         run: |
