Add push and pull_request triggers to the upload Python package workflow

--- a/.github/workflows/upload-python-package-pypi.yml
+++ b/.github/workflows/upload-python-package-pypi.yml
@@ -11,6 +11,10 @@ name: upload python package pypi
 on:
   release:
     types: [published]
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 permissions:
   contents: read
