--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,11 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "EquiForge"
 description = "A toolkit for equirectangular image processing and conversions."
+readme = "README.md"
 authors = [
     {name = "Mikkel Kappel Persson", email = "mikkelkp@hotmail.com"},
 ]
-requires-python = ">=3.7"
+requires-python = ">=3.8"
 keywords = ["equirectangular", "panorama", "image processing", "360"]
 classifiers = [
     "Development Status :: 3 - Alpha",
@@ -32,7 +33,7 @@ cuda = ["cupy-cuda12x>=12.0.0"]
 
 [tool.setuptools_scm]
 version_scheme = "guess-next-dev"
-local_scheme = "node-and-date"
+local_scheme = "no-local"  # Changed from "node-and-date"
 write_to = "equiforge/_version.py"
 
 [tool.setuptools]
