--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ cuda = ["cupy-cuda12x>=12.0.0"]
 
 [tool.setuptools_scm]
 version_scheme = "guess-next-dev"
-local_scheme = "no-local"  # Changed from "node-and-date"
+local_scheme = "no-local-version"  # Changed from "node-and-date"
 version_file = "equiforge/_version.py"
 
 [tool.setuptools]
