Update local_scheme in pyproject.toml to 'no-local-version' for versioning consistency

--- a/.github/workflows/upload-python-package-pypi.yml
+++ b/.github/workflows/upload-python-package-pypi.yml
@@ -8,10 +8,10 @@
 
 name: upload python package pypi
 
-on: [push]
+on:
 
-  # release:
-  #   types: [published]
+  release:
+    types: [published]
 
 
 
