--- a/.github/workflows/upload-python-package-pypi.yml
+++ b/.github/workflows/upload-python-package-pypi.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install packaging tools
         run: |
           python -m pip install --upgrade pip
-          python -m pip install build twine pyproject-metadata tomli
+          python -m pip install build twine pyproject-metadata tomli setuptools_scm
 
       - name: Clean previous build artifacts
         run: |
