--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ Homepage = "https://github.com/mikkelkappelpersson/equiforge"
 dev = ["pytest>=6.0.0", "jupyter>=1.0.0", "matplotlib>=3.4.0", "matplotlib>=3.4.0"]
 
 [tool.setuptools_scm]
-version_scheme = "release-branch-semver"
+version_scheme = "no-guess-dev"
 local_scheme = "no-local-version"
 version_file = "equiforge/_version.py"
 
