--- a/pixi.toml
+++ b/pixi.toml
@@ -19,6 +19,7 @@ cuda-nvrtc = ">=12.8.93,<13"
 cuda-version = ">=12.0"
 ipykernel = ">=6.29.5,<7"
 pytest = ">=8.3.5,<9"
+pandas = ">=2.2.3,<3"
 
 [pypi-dependencies]
 pyequilib = ">=0.5.8, <0.6"
